ui-changes and added authentication

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* src/index.css */
+/* styles.css */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Custom styles */
+body.dark {
+  background-color: theme('colors.background.DEFAULT');
+  color: theme('colors.text.DEFAULT');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: theme('colors.primary.DEFAULT');
+}
+
+button.primary {
+  background-color: theme('colors.primary.DEFAULT');
+  color: theme('colors.background.DEFAULT');
+}
+
+button.secondary {
+  background-color: theme('colors.secondary.DEFAULT');
+  color: theme('colors.background.DEFAULT');
+}
+
+.header {
+  background-color: theme('colors.background.DEFAULT');
+  border-bottom: 1px solid theme('colors.secondary.DEFAULT');
 }
